--- a/src/playground.ipynb
+++ b/src/playground.ipynb
@@ -2,110 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "import json\n",
-    "import sqlparse"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pyfile_path=\"../scripts/process1.py\"\n",
-    "pyfile_path=\"../notebooks/process2.ipynb\"\n",
-    "with open(pyfile_path) as f:\n",
-    "    content=f.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'{\"cells\":[{\"cell_type\":\"code\",\"execution_count\":null,\"metadata\":{},\"outputs\":[],\"source\":[\"importpandasaspd\\\\n\",\"\\\\n\",\"df1=pd.read_csv(\"a.csv\")\"]},{\"cell_type\":\"code\",\"execution_count\":null,\"metadata\":{},\"outputs\":[],\"source\":[\"df2=pd.read_csv(\\\\n\",\"\"b.csv\",\\\\n\",\"sep=\",\",\\\\n\",\"header=None\\\\n\",\")\\\\n\",\"\\\\n\",\"df3=pd.merge(df1,df2,on=\"ID\")\\\\n\",\"\\\\n\",\"df4=pd.read_csv(\"c.csv\",delimiter=\":\")\"]},{\"cell_type\":\"code\",\"execution_count\":null,\"metadata\":{},\"outputs\":[],\"source\":[\"\\\\n\",\"df3.to_csv(\"d.csv\",index=False)\"]},{\"cell_type\":\"code\",\"execution_count\":null,\"metadata\":{},\"outputs\":[],\"source\":[]}],\"metadata\":{\"kernelspec\":{\"display_name\":\"base\",\"language\":\"python\",\"name\":\"python3\"},\"language_info\":{\"name\":\"python\",\"version\":\"3.9.12(main,Apr42022,05:22:27)[MSCv.191664bit(AMD64)]\"},\"orig_nbformat\":4,\"vscode\":{\"interpreter\":{\"hash\":\"ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186\"}}},\"nbformat\":4,\"nbformat_minor\":2}'"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'networkx'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[26], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnetworkx\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'networkx'"
+     ]
     }
    ],
    "source": [
-    "content=re.sub(\"[\\s]+\",\"\",content)\n",
-    "content=re.sub(\"\\\\\\\\\\\"\",\"\\\"\",content)\n",
-    "content"
+    "import networkx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "json_path=\"../config/data_io_format.json\"\n",
-    "with open(json_path) as f:\n",
-    "    io_format=json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'function_suffix': '\\\\(\"([^\"]*)\"',\n",
-       " 'input_pattern': ['pd.read_csv'],\n",
-       " 'output_pattern': ['to_csv']}"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting networkx\n",
+      "  Using cached networkx-2.8.8-py3-none-any.whl (2.0 MB)\n",
+      "Installing collected packages: networkx\n",
+      "Successfully installed networkx-2.8.8\n"
+     ]
     }
    ],
    "source": [
-    "io_format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inp=io_format[\"input_pattern\"][0]\n",
-    "suf=io_format[\"function_suffix\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['a.csv', 'c.csv']"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "re.findall(inp+suf,content)"
+    "!pip install networkx"
    ]
   },
   {
