--- a/src/playground.ipynb
+++ b/src/playground.ipynb
@@ -2,44 +2,207 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 230,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'networkx'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[26], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnetworkx\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'networkx'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import networkx"
+    "import re\n",
+    "from pathlib import Path\n",
+    "import json\n",
+    "import sql_metadata\n",
+    "import os\n",
+    "import glob\n",
+    "import matplotlib.pyplot as plt\n",
+    "import networkx as nx\n",
+    "import pygraphviz as pgv\n",
+    "json_path = \"../config/data_io_format.json\"\n",
+    "with open(json_path) as f:\n",
+    "    io_format = json.load(f)\n",
+    "\n",
+    "\n",
+    "def python_data_io_parser(py_ipynb_file_path):\n",
+    "    \"\"\"\n",
+    "    Args:\n",
+    "        py_ipynb_file_path(str) : a full path of .py or .ipynb file to parse\n",
+    "    Returns:\n",
+    "        tuple(List,List): pair of inputed and outputed filenames lists\n",
+    "    Note:\n",
+    "        The input and output format are defined in /config/data_io_format.json.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    with open(py_ipynb_file_path) as f:\n",
+    "        code = f.read()\n",
+    "    # remove space,indention etc...\n",
+    "    code = re.sub(\"[\\s]+\", \"\", code)\n",
+    "    # if notebook is inputed, then remove metadata\n",
+    "    if \".ipynb\" in (py_ipynb_file_path):\n",
+    "        code = re.sub(\"\\\\\\\\\\\"\", \"\\\"\", code)\n",
+    "    input_patterns = io_format[\"python\"][\"input_pattern\"]\n",
+    "    output_patterns = io_format[\"python\"][\"output_pattern\"]\n",
+    "    suffix = io_format[\"python\"][\"suffix\"]\n",
+    "\n",
+    "    input_data = []\n",
+    "    output_data = []\n",
+    "\n",
+    "    for input_pattern in input_patterns:\n",
+    "        input_data.extend(re.findall(input_pattern+suffix, code))\n",
+    "\n",
+    "    for output_pattern in output_patterns:\n",
+    "        output_data.extend(re.findall(output_pattern+suffix, code))\n",
+    "    return (input_data, output_data)\n",
+    "\n",
+    "\n",
+    "def sql_data_io_parser(sql_file_path):\n",
+    "    \"\"\"\n",
+    "    Args:\n",
+    "        sql_file_path(str) : a full path of .sql file to parse\n",
+    "    Returns:\n",
+    "        tuple(List,List): pair of inputed and outputed tables lists\n",
+    "    Note:\n",
+    "        The supported table identifing formats are depend on sql-metadata library\n",
+    "    \"\"\"\n",
+    "    with open(sql_file_path) as f:\n",
+    "        code = f.read()\n",
+    "\n",
+    "    output_patterns = io_format[\"sql\"][\"output_pattern\"]\n",
+    "    suffix = io_format[\"sql\"][\"suffix\"]\n",
+    "\n",
+    "    all_tables = sql_metadata.Parser(code).tables\n",
+    "    output_tables = []\n",
+    "    for output_pattern in output_patterns:\n",
+    "        output_tables.extend(re.findall(output_pattern+suffix, code))\n",
+    "    input_tables = [\n",
+    "        table for table in all_tables if table not in output_tables]\n",
+    "    return(input_tables, output_tables)\n",
+    "\n",
+    "\n",
+    "class data_processing_flow_dag:\n",
+    "    \"\"\" \n",
+    "    This class conducts a DAG of data processing flow. \n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, repository_path,show_directory=True):\n",
+    "        \"\"\"\n",
+    "         show_directory: bool,default:True\n",
+    "           if False,the directory of the file is ignored.\n",
+    "        \"\"\"\n",
+    "        self.show_directory = show_directory\n",
+    "        self.repository_path = repository_path\n",
+    "        self.py_graph=None\n",
+    "        self.sql_graph=None\n",
+    "\n",
+    "    def build_py_graph(self):\n",
+    "        \"\"\"\n",
+    "        Build data processing flow graph according to py files\n",
+    "        Returns:\n",
+    "            None\n",
+    "        \"\"\"\n",
+    "        self.py_graph = pgv.AGraph(directed=True)\n",
+    "        all_files = [p for p in glob.glob(\n",
+    "            self.repository_path+'/**', recursive=True) if os.path.isfile(p)]\n",
+    "        for file in all_files:\n",
+    "            if Path(file).suffix in [\".py\",\".ipynb\"]:\n",
+    "                input_data, output_data = python_data_io_parser(file)\n",
+    "            else:\n",
+    "                continue\n",
+    "            #convert backslash in Windows path to forwardslask\n",
+    "            file=file.replace(\"\\\\\",\"/\").replace(\"\\n\",\"/n\")\n",
+    "            if self.show_directory == False:\n",
+    "                file = Path(file).name\n",
+    "                input_data = [Path(_).name for _ in input_data]\n",
+    "                output_data = [Path(_).name for _ in output_data]\n",
+    "\n",
+    "            # add nodes and edges on graph\n",
+    "            self.py_graph.add_node(file,style=\"filled\",fillcolor=\"#ffc0cb\",shape=\"box\")\n",
+    "            self.py_graph.add_nodes_from(input_data+output_data,style=\"filled\",fillcolor=\"#87cefa\")\n",
+    "            edge_in = [(i, file) for i in input_data]\n",
+    "            edge_out = [(file, o) for o in output_data]\n",
+    "            self.py_graph.add_edges_from(edge_in+edge_out)\n",
+    "\n",
+    "    def build_sql_graph(self):\n",
+    "        \"\"\"\n",
+    "        Build data processing flow graph according to sql files\n",
+    "        Returns:\n",
+    "            None\n",
+    "        \"\"\"\n",
+    "        self.sql_graph = pgv.AGraph(directed=True)\n",
+    "        all_files = [p for p in glob.glob(\n",
+    "            self.repository_path+'/**', recursive=True) if os.path.isfile(p)]\n",
+    "        for file in all_files:\n",
+    "            if Path(file).suffix in[\".sql\"]:\n",
+    "                input_data, output_data = sql_data_io_parser(file)\n",
+    "            else:\n",
+    "                continue\n",
+    "            # convert backslash in Windows path to forwardslask\n",
+    "            file=file.replace(\"\\\\\",\"/\").replace(\"\\n\",\"/n\")\n",
+    "            if self.show_directory == False:\n",
+    "                file = Path(file).name\n",
+    "                input_data = [Path(_).name for _ in input_data]\n",
+    "                output_data = [Path(_).name for _ in output_data]\n",
+    "\n",
+    "            # add nodes and edges on graph\n",
+    "            self.sql_graph.add_node(file,style=\"filled\",color=\"#ffc0cb\",shape=\"box\")\n",
+    "            self.sql_graph.add_nodes_from(input_data+output_data,style=\"filled\",color=\"#87cefa\")\n",
+    "            edge_in = [(i, file) for i in input_data]\n",
+    "            edge_out = [(file, o) for o in output_data]\n",
+    "            self.sql_graph.add_edges_from(edge_in+edge_out)\n",
+    "\n",
+    "    def draw_graphs(self,save_path=None):\n",
+    "        \"\"\"\n",
+    "        Draw data processing flow graph in which the color of file nodes and data nodes are distrinct with graphviz.\n",
+    "        Default : The graph is saved at data_processing_flow_graph folder the repository directory\n",
+    "        \"\"\"\n",
+    "        if save_path ==None:\n",
+    "            save_path=self.repository_path+\"/\"\n",
+    "        if self.py_graph:\n",
+    "            self.py_graph.draw(save_path+Path(self.repository_path).name+\"_py.svg\",prog=\"dot\")\n",
+    "        if self.sql_graph:\n",
+    "            self.sql_graph.draw(save_path+Path(self.repository_path).name+\"_sql.svg\",prog=\"dot\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 235,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting networkx\n",
-      "  Using cached networkx-2.8.8-py3-none-any.whl (2.0 MB)\n",
-      "Installing collected packages: networkx\n",
-      "Successfully installed networkx-2.8.8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install networkx"
+    "hoge=data_processing_flow_dag(repository_path=\"../test_repository\",show_directory=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hoge.build_py_graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hoge.build_sql_graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hoge.draw_graphs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
