--- a/src/playground.ipynb
+++ b/src/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,10 +199,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 259,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('../test_repository/notebooks/process2.ipynb', 'd.csv'),\n",
+       " ('a.csv', '../test_repository/notebooks/process2.ipynb'),\n",
+       " ('a.csv', '../test_repository/scripts/process1.py'),\n",
+       " ('c.csv', '../test_repository/notebooks/process2.ipynb'),\n",
+       " ('c.csv', '../test_repository/notebooks/process3.ipynb'),\n",
+       " ('d.csv', '../test_repository/scripts/anaysis.py'),\n",
+       " ('../test_repository/notebooks/process3.ipynb', 'merge.csv'),\n",
+       " ('e.csv', '../test_repository/notebooks/process3.ipynb'),\n",
+       " ('merge.csv', '../test_repository/scripts/anaysis.py'),\n",
+       " ('../test_repository/scripts/anaysis.py', 'output.csv'),\n",
+       " ('../test_repository/scripts/process1.py', 'c.csv'),\n",
+       " ('b.csv', '../test_repository/scripts/process1.py')]"
+      ]
+     },
+     "execution_count": 259,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hoge.py_graph.edges()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a=nx.DiGraph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.add_edges_from(hoge.py_graph.edges())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 271,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool(list(nx.simple_cycles(a)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 272,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool([1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DiDegreeView({'../test_repository/notebooks/process2.ipynb': 3, 'd.csv': 2, 'a.csv': 2, '../test_repository/scripts/process1.py': 3, 'c.csv': 3, '../test_repository/notebooks/process3.ipynb': 3, '../test_repository/scripts/anaysis.py': 3, 'merge.csv': 2, 'e.csv': 1, 'output.csv': 1, 'b.csv': 1})"
+      ]
+     },
+     "execution_count": 275,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.degree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 282,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../test_repository/notebooks/process2.ipynb ['a.csv', 'c.csv']\n",
+      "d.csv ['../test_repository/notebooks/process2.ipynb']\n",
+      "a.csv []\n",
+      "../test_repository/scripts/process1.py ['a.csv', 'b.csv']\n",
+      "c.csv ['../test_repository/scripts/process1.py']\n",
+      "../test_repository/notebooks/process3.ipynb ['c.csv', 'e.csv']\n",
+      "../test_repository/scripts/anaysis.py ['d.csv', 'merge.csv']\n",
+      "merge.csv ['../test_repository/notebooks/process3.ipynb']\n",
+      "e.csv []\n",
+      "output.csv ['../test_repository/scripts/anaysis.py']\n",
+      "b.csv []\n"
+     ]
+    }
+   ],
+   "source": [
+    "for node in a.nodes():\n",
+    "    if not node.endswith(\".sql\"):\n",
+    "        if list(a.predecessors(node))>1:\n",
+    "            print(\"WARNING:\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 286,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"abc\".endswith((\"c\",\"d\"))"
+   ]
   },
   {
    "cell_type": "code",
