--- a/src/playground.ipynb
+++ b/src/playground.ipynb
@@ -163,16 +163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hoge=data_processing_flow_dag(repository_path=\"../test_repository\",show_directory=True)"
+    "import dpfv_lib\n",
+    "\n",
+    "hoge=dpfv_lib.data_processing_flow_dag(repository_path=\"../test_repository\",show_directory=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,16 +192,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "save path c:\\Users\\TONG QIJUN\\repository\\data_processing_flow_visualizer\\test_repository/\n"
+     ]
+    }
+   ],
    "source": [
     "hoge.draw_graphs()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +229,7 @@
        " ('b.csv', '../test_repository/scripts/process1.py')]"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,22 +258,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "[]"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 291,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bool(list(nx.simple_cycles(a)))"
+    "list(nx.simple_cycles(a))"
    ]
   },
   {
